[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://art/greyCross.png" type="Texture" id=2]
[ext_resource path="res://font/NotoSansSC-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 3 )

[node name="Test" type="Node2D"]
position = Vector2( 0, 1080 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 67.0
margin_top = -1000.0
margin_right = 1853.0
margin_bottom = -168.0
color = Color( 0.729412, 0.517647, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite9" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite10" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite11" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite12" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="FPSTimer" type="Timer" parent="."]
wait_time = 0.012

[node name="ShowTargetTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="UnpaintTargetTimer" type="Timer" parent="."]
wait_time = 1.8

[node name="Button" type="Button" parent="."]
margin_left = 810.0
margin_top = -100.0
margin_right = 1038.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
text = "Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedbackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label" type="Label" parent="."]
margin_left = 854.002
margin_top = -1069.87
margin_right = 1059.0
margin_bottom = -1011.87
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="FPSTimer" to="." method="_on_FPSTimer_timeout"]
[connection signal="timeout" from="ShowTargetTimer" to="." method="_on_ShowTargetTimer_timeout"]
[connection signal="timeout" from="UnpaintTargetTimer" to="." method="_on_UnpaintTargetTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="FeedbackTimer" to="." method="_on_FeedbackTimer_timeout"]
